dropshot/tests/fail/bad_channel13.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel13.rs:17:1
   |
17 | / async fn bad_channel<S: Stuff + Sync + Send + 'static>(
18 | |     _rqctx: RequestContext<S>,
19 | |     _upgraded: WebsocketConnection,
20 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: generics are not permitted for endpoint handlers
  --> tests/fail/bad_channel13.rs:17:21
   |
17 | async fn bad_channel<S: Stuff + Sync + Send + 'static>(
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
